Fix Printing Bug #2: not printing on iOS

--- a/public2/css/quiz.css
+++ b/public2/css/quiz.css
@@ -126,4 +126,7 @@ i.icon.hidden {
     span.inline {
         display: inline !important;
     }
+    .ui.label {
+        background-color: transparent !important;
+    }
 }
